--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <hr />
   <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
   <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <h3><a href="./public/birth-day.html">Birthday Invite Project</a></h3>
   <img src="./assets/images/birth-day.png" height="200" alt="birthday invite project preview"/>
   <hr />
   <a href="./public/about.html">About Me</a>
